2010-01-17 Fred Kiefer <fredkiefer@gmx.de>

	* Headers/CoreFoundation/CFBase.h,
	* Headers/CoreFoundation/CFArray.h,
	* Headers/CoreFoundation/CFData.h: Don't include Foundation,h, use
	abstract types instead.
	* Source/CFArray.m,
	* Source/CFData.m,
	* Source/CFString.m: Adopt to this change by using plenty of type
	casts. 

2010-01-16 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFBase.m: Correctly reallocate memory.

2010-01-16 Fred Kiefer <fredkiefer@gmx.de>

	* Source/CFArray.m: Implement more of the functions and remove
	compiler warnings.

2010-01-16 Eric Wasylishen <ewasylishen@gmail.com>

	* Initial import of code by Stefan Bidigaray.