@@ -1,3 +1,7 @@
+2010-01-17 Stefan Bidigaray <stefanbidi@gmail.com>
+
+	* Source/CFBase.m: Implemented kCFAllocatorNull and kCFAllocatorMalloc.
+
 2010-01-17 Fred Kiefer <fredkiefer@gmx.de>
 
 	* Headers/CoreFoundation/CFBase.h,
